@@ -2,6 +2,7 @@ local _ENV = mkmodule('plugins.buildingplan.pens')
 
 GOOD_TILE_PEN, BAD_TILE_PEN = nil, nil
 VERT_TOP_PEN, VERT_MID_PEN, VERT_BOT_PEN = nil, nil, nil
+HORI_LEFT_PEN, HORI_MID_PEN, HORI_RIGHT_PEN = nil, nil, nil
 BUTTON_START_PEN, BUTTON_END_PEN = nil, nil
 SELECTED_ITEM_PEN = nil
 MINIMIZED_LEFT_PEN, MINIMIZED_RIGHT_PEN = nil, nil
@@ -21,6 +22,11 @@ function reload_pens()
     VERT_TOP_PEN = to_pen{tile=tp(tb_texpos, 10), ch=194, fg=COLOR_GREY, bg=COLOR_BLACK}
     VERT_MID_PEN = to_pen{tile=tp(tb_texpos, 4), ch=192, fg=COLOR_GREY, bg=COLOR_BLACK}
     VERT_BOT_PEN = to_pen{tile=tp(tb_texpos, 11), ch=179, fg=COLOR_GREY, bg=COLOR_BLACK}
+
+    local mb_texpos = dfhack.textures.getMediumBordersTexposStart()
+    HORI_LEFT_PEN = to_pen{tile=tp(mb_texpos, 12), ch=195, fg=COLOR_GREY, bg=COLOR_BLACK}
+    HORI_MID_PEN = to_pen{tile=tp(mb_texpos, 5), ch=196, fg=COLOR_GREY, bg=COLOR_BLACK}
+    HORI_RIGHT_PEN = to_pen{tile=tp(mb_texpos, 13), ch=180, fg=COLOR_GREY, bg=COLOR_BLACK}
 
     local cp_texpos = dfhack.textures.getControlPanelTexposStart()
     BUTTON_START_PEN = to_pen{tile=tp(cp_texpos, 13), ch='[', fg=COLOR_YELLOW}
